--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     justify-content:space-between;
     background-color: rgb(34, 111, 131);
     margin-left: -30px; 
-    margin-right: -30px;
+    margin-right: -60px;
     margin-bottom: 25px;
     margin-top: -30px;
     align-items: center;
@@ -19,8 +19,7 @@ body {
     height: 150px;
     width: autopx;
     align-items: flex-start;
-   
-    padding: 22px;
+    padding: 52px;
     margin-left: 155px;
 }
 
@@ -59,7 +58,8 @@ li {
      display: flex;
      flex-direction: row;
     background-color: rgb(39, 107, 107);
-    margin: -30px; 
+    margin: -30px;
+    margin-right: -60px;
     color: white;
     justify-content: space-evenly;
     padding-top: 55px;
@@ -108,5 +108,124 @@ h1 {
     height: 200px;
     width: 300px;
     margin-top: 55px;
-    padding-right: 105px;
+    
+    border-radius: 14px;
 }
+
+.flow {
+    margin-right: -80px;
+    text-align: center;
+    font-family: helvetica, "open sans", sans-serif;
+    font-weight: bold;
+    color: rgb(34, 111, 131);
+    margin-top: 85px;
+}
+
+.photos {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -80px;
+    gap: 33px;
+    justify-content: center;
+    font-family: roboto, varta, sans-serif;
+    color: rgb(34, 111, 131);
+    font-weight: 600;
+    text-align: center;
+margin-bottom: 55px;
+
+}
+
+.ffotos {
+    height: 230px;
+    width: auto;
+    border-style:solid;
+    border-width: 2px;
+    border-radius: 14px;
+border-color:  rgb(39, 107, 107);
+
+   
+}
+
+.foto1 {
+display: flex;
+flex-direction: column;
+
+}
+
+.foto2 {
+    display: flex;
+    flex-direction: column;
+    }
+
+.foto3 {
+    display: flex;
+    flex-direction: column;
+        }
+
+.foto4 {
+display: flex;
+flex-direction: column;
+}
+
+.statement {
+background-color: rgb(225, 249, 255);
+margin-left: -10px;
+margin-right: -60px;
+padding-top: 55px;
+padding-bottom: 55px;
+color: rgb(34, 111, 131);
+}
+
+.quote {
+    font-weight: 100;
+    font-size: 23px;
+    font-style: italic;
+    text-align: center;
+}
+
+.by {
+    text-align:end;
+    font-size: 19px;
+    margin-right: 425px;
+    font-weight: bold;
+}
+
+.action {
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(19, 54, 82);
+    margin-top: 65px;
+    margin-bottom: 65px;
+    padding-top: 33px;
+    margin-right: 115px;
+    margin-left: 235px;
+    padding-bottom: 33px;
+    justify-content:space-evenly;
+    align-items: center;
+    color: white;
+    border-radius: 14px;
+
+}
+
+.joinbutton {
+ 
+background-color: rgb(19, 54, 82);
+color: white;
+border-style: solid;
+border-width: 2px;
+border-radius: 14px;
+border-color: white;
+font-size: 22px;
+padding: 12px;
+
+}
+
+.footer {
+    background-color: rgb(34, 111, 131);
+    color: white;
+    text-align: center;
+    margin-bottom: -10px;
+    margin-right: -60px;
+
+}
+
